[project]
name = "gaia_xmatch_hats"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.13.7",
    "lsdb",
    "hats-import",
    "awscli",
    "boto3",
    "ipykernel"
]

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "dagster-webserver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "gaia_xmatch_hats"
registry_modules = [
    "gaia_xmatch_hats.components.*",
]


